# drake

./: CMakeLists.txt
.github/ISSUE_TEMPLATE/: BUG.yml
C_Iris_Examples/: 2d_example_bilinear_alternation.ipynb  2d_example_visualize_planes.ipynb  7dof_iiwas_c_iris.ipynb  7dof_iiwas_prm_certify.ipynb  BUILD.bazel  double_pendulum_example.ipynb  dual_ur.ipynb  dual_ur_closest.npz  iris_plant_visualizer.py  iris_plant_visualizer2.py  pendulum_on_rail2d.ipynb  pinball_iiwas.ipynb  pinball_iiwas_2d.ipynb  pinball_iiwas_2d_motion_planning.ipynb  pinball_iiwas_prm_certify.ipynb  prm.py  simple_pendulum_example.ipynb  single_ur.ipynb  ur3e_demo.py  visualization_utils.py  visualizations_utils.py
C_Iris_Examples/assets/: double_pendulum_world.urdf  oneDOF_iiwa7_with_box_collision.sdf  shelves.sdf  single_pendulum_world.urdf
C_Iris_Examples/gcs/: bezier.py
bindings/pydrake/: BUILD.bazel  geometry_py_optimization.cc  lcm_py.cc  math_py.cc  stubgen.py  symbolic_py.cc  symbolic_py_unapply.cc  symbolic_types_pybind.h
common/: BUILD.bazel  eigen_types.h  fmt_ostream.h  polynomial.h  text_logging.h  timer.h  type_safe_index.h
common/ad/: auto_diff.h
common/symbolic/: BUILD.bazel  decompose.h  expression.h  generic_polynomial.h  latex.h  monomial_util.cc  polynomial.cc  polynomial.h  rational_function.cc  rational_function.h  replace_bilinear_terms.h  trigonometric_polynomial.cc  trigonometric_polynomial.h
common/test/: eigen_types_test.cc
common/test_utilities/: BUILD.bazel
common/yaml/: BUILD.bazel  yaml_io.h  yaml_io_options.h  yaml_node.h  yaml_read_archive.cc  yaml_read_archive.h  yaml_write_archive.h
doc/: index.md
doc/_pages/: bazel.md  buildcop.md  from_binary.md  from_source.md  installation.md  pip.md  release_playbook.md  reviewable.md  (+1 more)
geometry/: BUILD.bazel  geometry_ids.h  geometry_properties.h  geometry_state.cc  geometry_state.h  internal_geometry.cc  internal_geometry.h  kinematics_vector.cc  kinematics_vector.h  make_mesh_for_deformable.cc  make_mesh_for_deformable.h  meshcat.cc  meshcat.html  meshcat_visualizer.cc  meshcat_visualizer.h  proximity_properties.h  query_object.h  scene_graph.cc  scene_graph.h  scene_graph_inspector.h  shape_specification.cc  shape_specification.h
lcm/: BUILD.bazel  drake_lcm.cc  drake_lcm.h  drake_lcm_log.cc  drake_lcm_log.h  drake_lcm_params.h
math/: BUILD.bazel  autodiff.h  rigid_transform.h  rotation_matrix.cc
planning/: BUILD.bazel  collision_checker.cc  robot_diagram.cc  robot_diagram.h  robot_diagram_builder.cc  robot_diagram_builder.h  scene_graph_collision_checker.cc
solvers/: BUILD.bazel  binding.h  choose_best_solver.cc  common_solver_option.h  create_constraint.h  csdp_solver.cc  csdp_solver.h  csdp_solver_common.cc  defs.bzl  mathematical_program.cc  mathematical_program.h  mathematical_program_result.h  mosek_solver.cc  mosek_solver.h  scs_solver.cc  snopt_solver.cc  solution_result.h  solver_options.cc
tools/: macos-arch-arm64.bazelrc  ubuntu-focal.bazelrc  ubuntu-jammy.bazelrc
tutorials/: BUILD.bazel  README.md  _developers.md  authoring_leaf_systems.ipynb  authoring_multibody_simulation.ipynb  dynamical_systems.ipynb  index.ipynb  licensed_solvers_deepnote.ipynb  rendering_multibody_plant.ipynb
visualization/: visualization_config_functions.cc
(+443 files in other folders)
