# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/jupyter:jupyter_py.bzl", "drake_jupyter_py_binary")
load(
    "//tools/skylark:drake_py.bzl",
    "drake_py_library",
    "drake_py_unittest",
)

filegroup(
    name = "models",
    srcs = glob(
        [
            "models/**",
        ],
        exclude = [
            "**/*.sha512",
        ],
    ),
    data = [
        "assets/2dof_iiwa_translating_base.sdf",
        "assets/box_small.urdf",
        "assets/ground.urdf",
        "assets/oneDOF_iiwa7_with_box_collision.sdf",
        "assets/twoDOF_iiwa7_with_box_collision.sdf",
        "directives/trans2dof_directives.yaml",
    ],
    visibility = ["//visibility:public"],
)

##########################################################
# LIBRARIES
##########################################################

drake_py_library(
    name = "visualization_utils",
    srcs = [
        "visualization_utils.py",
    ],
    visibility = ["//visibility:public"],
)

drake_py_library(
    name = "iris_plant_visualizer",
    srcs = [
        "iris_plant_visualizer.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//bindings/pydrake",
    ],
)

##########################################################
# NOTEBOOKS
##########################################################

drake_jupyter_py_binary(
    name = "2d_example_visualize_planes",
    add_test_rule = 0,
    data = [
        "//C_Iris_Examples:models",
    ],
    deps = [
        "//C_Iris_Examples:iris_plant_visualizer",
        "//C_Iris_Examples:visualization_utils",
        "//bindings/pydrake",
    ],
)

drake_jupyter_py_binary(
    name = "2d_example_bilinear_alternation",
    add_test_rule = 0,
    data = [
        "//C_Iris_Examples:models",
    ],
    deps = [
        "//C_Iris_Examples:iris_plant_visualizer",
        "//C_Iris_Examples:visualization_utils",
        "//bindings/pydrake",
    ],
)

drake_jupyter_py_binary(
    name = "dual_ur",
    add_test_rule = 0,
    data = [
        "//C_Iris_Examples:models",
        "//manipulation/models/ur3e:models",
        "//manipulation/models/wsg_50_description:models",
    ],
    deps = [
        "//C_Iris_Examples:iris_plant_visualizer",
        "//C_Iris_Examples:visualization_utils",
        "//bindings/pydrake",
    ],
)

drake_jupyter_py_binary(
    name = "single_ur",
    add_test_rule = 0,
    data = [
        "//C_Iris_Examples:models",
        "//manipulation/models/ur3e:models",
        "//manipulation/models/wsg_50_description:models",
    ],
    deps = [
        "//C_Iris_Examples:iris_plant_visualizer",
        "//C_Iris_Examples:visualization_utils",
        "//bindings/pydrake",
    ],
)

drake_jupyter_py_binary(
    name = "pendulum_on_rail2d",
    add_test_rule = 0,
    data = [
        "//C_Iris_Examples:models",
    ],
    deps = [
        "//C_Iris_Examples:iris_plant_visualizer",
        "//C_Iris_Examples:visualization_utils",
        "//bindings/pydrake",
    ],
)
